Look in prepended modules before class during constant lookup

When looking for constants in a class, previously prepended modules were
not considered until after the class. This is different than method
lookup, where methods in prepended modules are considered before the
class.

The reason for this behavior is that when an origin iclass is created,
the methods are moved from the original class to the origin class, but
the constant table is not moved to the origin class, it stays in the
original class.

There are two ways to fix this. One would be to move the constant
table to the origin class, just as the method table is moved. This
may be a better long term fix, but I'm guessing that will break any
internal code that assumes the constant table will be in the class
itself. I did not attempt that approach.

This commit uses a more localized fix. During constant lookup, when
we come to a class that has an origin class and prepended module(s),
skip the class and try the lookup in the prepended module(s). Once
we reach the origin class, then look in the original class, before
continuing lookup with the ancestor of the origin class. This can
be a recursive process as a class can prepend a module that has
prepended other modules.

This code is a bit more complex than I'd like in order to use
recursion to handle looking in prepended modules. The recursive
method is chosen here as origin classes operate as a stack, and
using recursion allows for using the C stack to store information
needed during the lookup in prepended modules. I think it is best
to avoid allocating heap memory during constant lookup.

Fixes [Bug #17887]